# minefetch

./: .gitignore  Cargo.toml  Makefile  README.md  build  build-aarch64  build-riscv  build-riscv64gc  build-static  build-x86_64
.cargo/: config.toml
src/: api.rs  cache.rs  consts.rs  coreutils.rs  downloader.rs  front.rs  helpmsg.rs  main.rs  mfio.rs  profile.rs  structs.rs  utils.rs
