[package]
name = "minefetch"
version = "1.5.2"
edition = "2024"
authors = ["Kirill Sergeev <kirsergeev@icloud.com>"]
readme = "README.md"
repository = "https://github.com/KirillkoTankisto/minefetch"
license = "GPL-3.0-or-later"

[dependencies]
bytes = "1.10.1"
console = "0.15.11"
libc = "0.2.172"
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
