[package]
name = "minefetch"
edition = "2024"
authors = ["Kirill Sergeev <kirsergeev@icloud.com>"]
readme = "README.md"
repository = "https://github.com/KirillkoTankisto/minefetch"
license = "GPL-3.0-or-later"
version = "1.6.8"

[dependencies]
async-recursion = "1.1.1"
bytes = "1.11.0"
console = "0.15.11"
futures = "0.3.31"
indicatif = "0.18.3"
libc = "0.2.178"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.23"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
